# PICalculator

./: .gitignore  README.md  buttons.xlsx
Emulator/: CMakeLists.txt
Emulator/src/: C74.cpp  C74.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pic16instructionset.cpp  pic16instructionset.h  pic16machine.c  pic16machine.cpp  pic16machine.h  pic16register.cpp  pic16register.h  pick_microcontroller.ui  pickmicrocontroller.cpp  pickmicrocontroller.h
PIC16/: .cproject  .project  CMakeLists.txt  PIC16.h  PIC16ISelDAGToDAG.cpp  PIC16ISelDAGToDAG.h  PIC16ISelLowering.cpp  PIC16ISelLowering.h  PIC16InstrInfo.cpp  PIC16InstrInfo.h  PIC16InstrInfo.td  PIC16MCAsmInfo.cpp  PIC16MemSelOpt.cpp  PIC16RegisterInfo.cpp  PIC16RegisterInfo.h  PIC16RegisterInfo.td  PIC16Section.cpp  PIC16Section.h  PIC16SelectionDAGInfo.cpp  PIC16SelectionDAGInfo.h  PIC16Subtarget.cpp  PIC16Subtarget.h  PIC16TargetMachine.cpp  PIC16TargetMachine.h  PIC16TargetObjectFile.cpp  PIC16TargetObjectFile.h
PIC16/TargetInfo/: CMakeLists.txt  PIC16TargetInfo.cpp  PIC16TargetInfo.h
calculator/: Cargo.toml
pcb/: fp-info-cache  proj.kicad_pcb  proj.kicad_prl  proj.kicad_pro  proj.kicad_sch  symbols.kicad_sym  ~proj.kicad_pcb.lck
pcb/1.0/: proj.kicad_pcb  proj.kicad_sch
pcb/1.1/: proj.kicad_pcb  proj.kicad_sch
pcb/1.2/: proj.kicad_sch
pcb/1.3/: proj.kicad_pcb  proj.kicad_sch
pcb/1.4/: proj.kicad_pcb  proj.kicad_sch
pcb/Parts.pretty/: BAT_BAT-HLD-001-THM.kicad_mod  ERM12864-7.kicad_mod
programs/complex/STM/: Cargo.toml
programs/fpu/PIC/: CMakeLists.txt  README.md
programs/fpu/STM/: Cargo.toml  Embed.toml
programs/fpu/STM/.cargo/: config.toml
programs/fpu/STM/lib/src/: lazylock.rs  lib.rs
programs/fpu/STM/lib/src/parser/: expression.rs  mod.rs  tokenizer.rs  util.rs
programs/fpu/STM/src/: gui.rs  keymaps.rs  main.rs  util.rs
programs/fpu/STM/src/gui/: constants.rs  graph.rs  graph_eq.rs  mod.rs  sci_error.rs  sci_mode.rs
programs/piconly/: .gitignore  README.md
programs/piconly/src/: definitions.h  main.c  picalc.pjt
programs/piconly/test_proj/: test.c
programs/simple/: CMakeLists.txt
(+17 files in other folders)
