[package]
name = "picalculator_complex_stm"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f401", "defmt"] # replace the model of your microcontroller here
                         # and add other required features
